zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__screen_can_break_floating_plugin_pane_to_a_new_tab-8.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 2988
expression: "format!(\"{}\", snapshot_count)"
---
7
