zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__screen_can_break_multiple_stacked_panes_to_a_new_tab.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", snapshot)"
---
00 (C): ─ pane_to_stay ─────────────────────────────────────────────────────────────────
01 (C):                                                                                 
02 (C):                                                                                 
03 (C):                                                                                 
04 (C):                                                                                 
05 (C):                                                                                 
06 (C):                                                                                 
07 (C):                                                                                 
08 (C):                                                                                 
09 (C):                                                                                 
10 (C):                                                                                 
11 (C):                                                                                 
12 (C):                                                                                 
13 (C):                                                                                 
14 (C):                                                                                 
15 (C):                                                                                 
16 (C):                                                                                 
17 (C):                                                                                 
18 (C): ─ pane_to_break_1 ──────────────────────────────────────────────────────────────
19 (C): ─ pane_to_break_2 ──────────────────────────────────────────────────────────────
